@startuml Tournament System
' Internal development class diagram
' Describes database fields and object methods required

title Tournament System - Group 1 

class Admin {
    *admin_id: Integer
    google_id: String
    name: String
    email: String
    isManager: Boolean
}

class Match {
    *match_id: Integer
    tournament_id: Integer
    parentMatch_id: Integer
    team1_id: Integer
    team2_id: Integer
    winner_id: Integer
    tier: Integer
}
class Team {
    *team_id: Integer
    tournament_id: Integer
    name: String
}

class Tournament {
    *tournament_id: Integer
    name: String
    description: String
    prize: String
    teamLimit: Integer
    start_date: Date
    end_date: Date
}


Admin "1..*" -- "0..*" Tournament : "Manages"
Admin "1..*" -- "0..*" Team : "Manages"
Team "2..*" -- "1..1" Tournament : "Plays in"
Team "2..2" -- "1..*" Match : "Competes in"
Tournament "1" -- "3..*" Match : "Contains"

@enduml